// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`empty state for enterprise, can create 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
  margin-left: auto;
  margin-right: auto;
  padding: 56px;
  padding-top: 32px;
  width: 100%;
}

.c10 {
  box-sizing: border-box;
  max-width: 600px;
}

.c11 {
  box-sizing: border-box;
  margin-bottom: 24px;
  text-align: center;
}

.c15 {
  box-sizing: border-box;
  text-align: center;
}

.c16 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 224px;
}

.c16:active {
  opacity: 0.56;
}

.c16:hover,
.c16:focus {
  background: #651FFF;
}

.c16:active {
  background: #354AA4;
}

.c16:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17 {
  line-height: 1.5;
  border-radius: 4px;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  border: 1px solid;
  box-sizing: border-box;
  background-color: transparent;
  cursor: pointer;
  font-family: inherit;
  font-weight: bold;
  outline: none;
  opacity: 0.56;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  border-color: rgba(255,255,255,0.87);
  color: #FFFFFF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  border-color: rgba(255,255,255,0.87);
  color: rgba(255,255,255,0.87);
  margin-left: 24px;
  width: 224px;
}

.c17:hover {
  opacity: 1;
}

.c17:active {
  opacity: 0.24;
}

.c17 > span {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c17:hover,
.c17:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c17:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c17:hover,
.c17:focus {
  border-color: #FFFFFF;
  color: #FFFFFF;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c9 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c12 {
  display: block;
  outline: none;
  height: 160px;
  margin-left: auto;
  margin-right: auto;
  margin-bottom: 24px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 700;
  font-size: 24px;
  line-height: 24px;
  margin-bottom: 8px;
}

.c14 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 14px;
  font-weight: 400;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c3 c4 c5"
    >
      <div
        class="c6 c7"
      >
        Applications
      </div>
    </div>
    <div
      class="c8 c9 sc-jSMfEi c8"
      width="100%"
    >
      <div
        class="c10"
      >
        <div
          class="c11"
        >
          <img
            class="c12"
            height="160px"
            src="file_stub"
          />
          <div
            class="c13"
            font-size="24"
            font-weight="700"
          >
            Add your first application to Teleport
          </div>
          <div
            class="c14"
            font-size="14"
            font-weight="400"
            style="opacity: 0.6;"
          >
            Teleport Application Access provides secure access to internal applications.
          </div>
        </div>
        <div
          class="c15"
        >
          <a
            href="/web/discover"
            style="text-decoration: none;"
          >
            <button
              class="c16"
              kind="primary"
              width="224px"
            >
              Add 
              application
            </button>
          </a>
          <a
            class="c17"
            href="https://goteleport.com/docs/application-access/getting-started/"
            rel="noreferrer"
            target="_blank"
            width="224px"
          >
            View Documentation
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`failed state 1`] = `
.c8 {
  display: flex;
  align-items: center;
  justify-content: center;
  border-radius: 2px;
  box-sizing: border-box;
  box-shadow: 0 1px 4px rgba(0,0,0,0.24);
  margin: 0 0 24px 0;
  min-height: 40px;
  padding: 8px 16px;
  overflow: auto;
  word-break: break-word;
  line-height: 1.5;
  background: #f50057;
  color: #FFFFFF;
}

.c8 a {
  color: #FFFFFF;
}

.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
  width: 100%;
}

.c11 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c28 {
  box-sizing: border-box;
  border-radius: 100%;
  background-color: #0097a7;
  height: 32px;
  width: 32px;
}

.c34 {
  box-sizing: border-box;
  border-radius: 100%;
  background-color: #00796b;
  height: 32px;
  width: 32px;
}

.c35 {
  box-sizing: border-box;
  border-radius: 100%;
  background-color: #e64a19;
  height: 32px;
  width: 32px;
}

.c36 {
  box-sizing: border-box;
  border-radius: 100%;
  background-color: #f57c00;
  height: 32px;
  width: 32px;
}

.c41 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c33 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 88px;
}

.c33:active {
  opacity: 0.56;
}

.c33:hover,
.c33:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c33:active {
  opacity: 0.24;
}

.c33:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c24 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c37 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 22px;
}

.c38 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: rgba(255,255,255,0.56);
  font-size: 14px;
}

.c43 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c12 {
  display: flex;
  align-items: center;
}

.c29 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c40 {
  display: flex;
  justify-content: flex-end;
}

.c31 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-right: 4px;
  margin-bottom: 4px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c30 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 16px;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c26 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c26 > thead > tr > th,
.c26 > tbody > tr > th,
.c26 > tfoot > tr > th,
.c26 > thead > tr > td,
.c26 > tbody > tr > td,
.c26 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c26 > thead > tr > th:first-child,
.c26 > tbody > tr > th:first-child,
.c26 > tfoot > tr > th:first-child,
.c26 > thead > tr > td:first-child,
.c26 > tbody > tr > td:first-child,
.c26 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c26 > thead > tr > th:last-child,
.c26 > tbody > tr > th:last-child,
.c26 > tfoot > tr > th:last-child,
.c26 > thead > tr > td:last-child,
.c26 > tbody > tr > td:last-child,
.c26 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c26 > tbody > tr > td {
  vertical-align: baseline;
}

.c26 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c26 > thead > tr > th .c23 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c26 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c26 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c26 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c9 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c39 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c32 {
  cursor: pointer;
}

.c42 {
  background: none;
  border: none;
  cursor: pointer;
  margin-left: 0;
  margin-right: 0;
}

.c42 .c23 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c42:hover .c23,
.c42:focus .c23 {
  opacity: 1;
}

.c42:disabled {
  cursor: default;
}

.c42:disabled .c23 {
  opacity: 0.1;
}

.c44 {
  background: none;
  border: none;
  cursor: pointer;
  margin-left: 0;
}

.c44 .c23 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c44:hover .c23,
.c44:focus .c23 {
  opacity: 1;
}

.c44:disabled {
  cursor: default;
}

.c44:disabled .c23 {
  opacity: 0.1;
}

.c16 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c14 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c15 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-right: 184px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-left: 16px;
  padding-right: 16px;
}

.c15:hover,
.c15:focus,
.c15:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c15::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c18 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c21 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c21:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #651FFF;
}

.c19 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c19:checked + .c20 {
  background: #512FC9;
}

.c19:checked + .c20:before {
  transform: translate(16px,-50%);
}

.c19:disabled + .c20 {
  background: #222C59;
}

.c19:disabled + .c20:before {
  background: #455a64;
}

.c17 {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-right: 16px;
  padding-left: 16px;
  width: 120px;
}

.c27 > tbody > tr > td {
  vertical-align: middle;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c3 c4 c5"
    >
      <div
        class="c6 c7"
      >
        Applications
      </div>
    </div>
    <div
      class="c8"
      kind="danger"
    >
      <div>
        some error message
      </div>
    </div>
    <form
      class="c9"
    >
      <div
        class="c10 c4"
        width="100%"
      >
        <div
          class="c11 c12"
          style="width: 70%;"
        >
          <div
            class="c13"
            width="100%"
          >
            <div
              class="c14"
            >
              <input
                class="c15"
                placeholder="SEARCH..."
                value=""
              />
              <div
                class="c16"
              >
                <div
                  class="c17"
                >
                  <label
                    class="c18"
                  >
                    <input
                      class="c19"
                      type="checkbox"
                    />
                    <div
                      class="c20 c21"
                    />
                  </label>
                  <div
                    class="c22"
                  >
                    Advanced
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="line-height: 0px;"
          >
            <span
              class="c23 c24 icon icon-info_outline "
              color="light"
              style="cursor: pointer; font-size: 20px;"
            />
          </div>
        </div>
        <div
          class="c11 c1"
        >
          <div
            class="c25"
            color="primary.contrastText"
          >
            SHOWING 
            <strong>
              1
            </strong>
             - 
            <strong>
              4
            </strong>
             of
             
            <strong>
              4
            </strong>
          </div>
        </div>
      </div>
    </form>
    <table
      class="c26 c27"
    >
      <thead>
        <tr>
          <th
            style="cursor: default;"
          />
          <th>
            <a>
              Name
              <span
                class="c23 c24 icon icon-chevron-up "
                color="light"
                title="sort items asc"
              />
            </a>
          </th>
          <th>
            <a>
              Description
              <span
                class="c23 c24 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c28 c29"
              height="32px"
              width="32px"
            >
              <div
                class="c30"
                font-size="3"
              >
                J
              </div>
            </div>
          </td>
          <td>
            Jenkins
          </td>
          <td>
            This is a Jenkins app
          </td>
          <td>
            https://
            jenkins.teleport-proxy.com
          </td>
          <td>
            <div
              class="c31 c32"
              kind="secondary"
            >
              env: prod
            </div>
            <div
              class="c31 c32"
              kind="secondary"
            >
              cluster: one
            </div>
          </td>
          <td
            align="right"
          >
            <a
              class="c33"
              href="/web/launch/jenkins.one/one/jenkins.teleport-proxy.com"
              kind="border"
              rel="noreferrer"
              target="_blank"
              width="88px"
            >
              LAUNCH
            </a>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c34 c29"
              height="32px"
              width="32px"
            >
              <div
                class="c30"
                font-size="3"
              >
                M
              </div>
            </div>
          </td>
          <td>
            Mattermost1
          </td>
          <td>
            This is a Mattermost app
          </td>
          <td>
            https://
            mattermost.teleport-proxy.com
          </td>
          <td>
            <div
              class="c31 c32"
              kind="secondary"
            >
              env: dev
            </div>
            <div
              class="c31 c32"
              kind="secondary"
            >
              cluster: two
            </div>
          </td>
          <td
            align="right"
          >
            <a
              class="c33"
              href="/web/launch/mattermost.one/one/mattermost.teleport-proxy.com"
              kind="border"
              rel="noreferrer"
              target="_blank"
              width="88px"
            >
              LAUNCH
            </a>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c35 c29"
              height="32px"
              width="32px"
            >
              <div
                class="c30"
                font-size="3"
              >
                G
              </div>
            </div>
          </td>
          <td>
            Grafana
          </td>
          <td>
            This is a Grafana app
          </td>
          <td>
            https://
            grafana.teleport-proxy.com
          </td>
          <td>
            <div
              class="c31 c32"
              kind="secondary"
            >
              env: dev
            </div>
            <div
              class="c31 c32"
              kind="secondary"
            >
              cluster: one
            </div>
          </td>
          <td
            align="right"
          >
            <a
              class="c33"
              href="/web/launch/grafana.one/one/grafana.teleport-proxy.com"
              kind="border"
              rel="noreferrer"
              target="_blank"
              width="88px"
            >
              LAUNCH
            </a>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c36 c29"
              height="32px"
              width="32px"
            >
              <span
                class="c23 c37 icon icon-amazonaws "
                color="light"
                font-size="6"
              />
            </div>
          </td>
          <td>
            aws-console-1
          </td>
          <td>
            This is an AWS Console app
          </td>
          <td>
            https://
            awsconsole-1.teleport-proxy.com
          </td>
          <td>
            <div
              class="c31 c32"
              kind="secondary"
            >
              aws_account_id: A1234
            </div>
            <div
              class="c31 c32"
              kind="secondary"
            >
              env: dev
            </div>
            <div
              class="c31 c32"
              kind="secondary"
            >
              cluster: two
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c33"
              kind="border"
              width="88px"
            >
              LAUNCH
              <span
                class="c23 c38 icon icon-caret-down "
                color="text.secondary"
                font-size="2"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      class="c39"
    >
      <div
        class="c10 c40"
        width="100%"
      >
        <div
          class="c41 c12"
        />
        <div
          class="c11 c1"
        >
          <button
            class="c42"
            disabled=""
            title="Previous page"
          >
            <span
              class="c23 c43 icon icon-arrow-left-circle "
              color="light"
              font-size="3"
            />
          </button>
          <button
            class="c44"
            disabled=""
            title="Next page"
          >
            <span
              class="c23 c43 icon icon-arrow-right-circle "
              color="light"
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`loaded state 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c10 {
  box-sizing: border-box;
  width: 100%;
}

.c11 {
  box-sizing: border-box;
}

.c13 {
  box-sizing: border-box;
  margin-right: 16px;
  width: 100%;
}

.c28 {
  box-sizing: border-box;
  border-radius: 100%;
  background-color: #0097a7;
  height: 32px;
  width: 32px;
}

.c34 {
  box-sizing: border-box;
  border-radius: 100%;
  background-color: #00796b;
  height: 32px;
  width: 32px;
}

.c35 {
  box-sizing: border-box;
  border-radius: 100%;
  background-color: #e64a19;
  height: 32px;
  width: 32px;
}

.c36 {
  box-sizing: border-box;
  border-radius: 100%;
  background-color: #f57c00;
  height: 32px;
  width: 32px;
}

.c41 {
  box-sizing: border-box;
  margin-right: 8px;
}

.c8 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #512FC9;
  color: rgba(255,255,255,0.87);
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  width: 240px;
}

.c8:active {
  opacity: 0.56;
}

.c8:hover,
.c8:focus {
  background: #651FFF;
}

.c8:active {
  background: #354AA4;
}

.c8:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c33 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  background: #2C3A73;
  border: 1px solid #1C254D;
  opacity: .87;
  color: rgba(255,255,255,0.87);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  width: 88px;
}

.c33:active {
  opacity: 0.56;
}

.c33:hover,
.c33:focus {
  background: #2C3A73;
  border: 1px solid rgba(255,255,255,0.1);
  opacity: 1;
}

.c33:active {
  opacity: 0.24;
}

.c33:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
}

.c24 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
}

.c37 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 22px;
}

.c38 {
  display: inline-block;
  transition: color 0.3s;
  margin-left: 4px;
  color: rgba(255,255,255,0.56);
  font-size: 14px;
}

.c43 {
  display: inline-block;
  transition: color 0.3s;
  color: #FFFFFF;
  font-size: 16px;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c12 {
  display: flex;
  align-items: center;
}

.c29 {
  display: flex;
  align-items: center;
  justify-content: center;
}

.c40 {
  display: flex;
  justify-content: flex-end;
}

.c31 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  background-color: #111B48;
  color: rgba(255,255,255,0.87);
  margin-right: 4px;
  margin-bottom: 4px;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
}

.c25 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin-right: 4px;
  color: #FFFFFF;
}

.c30 {
  overflow: hidden;
  text-overflow: ellipsis;
  text-transform: uppercase;
  font-weight: 600;
  font-size: 16px;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

.c26 {
  background: #222C59;
  box-shadow: 0 4px 16px rgba(0,0,0,0.24);
  border-collapse: collapse;
  border-spacing: 0;
  font-size: 12px;
  width: 100%;
}

.c26 > thead > tr > th,
.c26 > tbody > tr > th,
.c26 > tfoot > tr > th,
.c26 > thead > tr > td,
.c26 > tbody > tr > td,
.c26 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c26 > thead > tr > th:first-child,
.c26 > tbody > tr > th:first-child,
.c26 > tfoot > tr > th:first-child,
.c26 > thead > tr > td:first-child,
.c26 > tbody > tr > td:first-child,
.c26 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c26 > thead > tr > th:last-child,
.c26 > tbody > tr > th:last-child,
.c26 > tfoot > tr > th:last-child,
.c26 > thead > tr > td:last-child,
.c26 > tbody > tr > td:last-child,
.c26 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c26 > tbody > tr > td {
  vertical-align: baseline;
}

.c26 > thead > tr > th {
  background: #111B48;
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c26 > thead > tr > th .c23 {
  font-weight: bold;
  font-size: 8px;
  margin-left: 8px;
}

.c26 > tbody > tr > td {
  color: rgba(255,255,255,0.87);
  line-height: 16px;
}

.c26 tbody tr {
  border-bottom: 1px solid #1C254D;
}

.c26 tbody tr:hover {
  background-color: rgb(37,49,98);
}

.c9 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-top-left-radius: 8px;
  border-top-right-radius: 8px;
}

.c39 {
  padding: 16px 24px;
  display: flex;
  height: 24px;
  flex-shrink: 0;
  align-items: center;
  justify-content: space-between;
  background: #222C59;
  border-bottom-left-radius: 8px;
  border-bottom-right-radius: 8px;
}

.c32 {
  cursor: pointer;
}

.c42 {
  background: none;
  border: none;
  cursor: pointer;
  margin-left: 0;
  margin-right: 0;
}

.c42 .c23 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c42:hover .c23,
.c42:focus .c23 {
  opacity: 1;
}

.c42:disabled {
  cursor: default;
}

.c42:disabled .c23 {
  opacity: 0.1;
}

.c44 {
  background: none;
  border: none;
  cursor: pointer;
  margin-left: 0;
}

.c44 .c23 {
  font-size: 20px;
  transition: all 0.3s;
  opacity: 0.5;
}

.c44:hover .c23,
.c44:focus .c23 {
  opacity: 1;
}

.c44:disabled {
  cursor: default;
}

.c44:disabled .c23 {
  opacity: 0.1;
}

.c16 {
  position: absolute;
  height: 100%;
  right: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  background: #2C3A73;
  border-radius: 200px;
}

.c14 {
  position: relative;
  display: flex;
  overflow: hidden;
  width: 100%;
  border-radius: 200px;
  height: 32px;
  background: #111B48;
}

.c15 {
  border: none;
  outline: none;
  box-sizing: border-box;
  height: 100%;
  font-size: 12px;
  width: 100%;
  transition: all 0.2s;
  padding-right: 184px;
  color: rgba(255,255,255,0.87);
  background: #111B48;
  padding-left: 16px;
  padding-right: 16px;
}

.c15:hover,
.c15:focus,
.c15:active {
  background: #1C254D;
  box-shadow: inset 0 2px 4px rgba(0,0,0,.24);
  color: rgba(255,255,255,0.87);
}

.c15::placeholder {
  color: rgba(255,255,255,0.24);
  font-size: 12px;
}

.c18 {
  position: relative;
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c21 {
  width: 32px;
  height: 12px;
  border-radius: 12px;
  background: #222C59;
  cursor: inherit;
  flex-shrink: 0;
}

.c21:before {
  content: '';
  position: absolute;
  top: 50%;
  transform: translate(0,-50%);
  width: 16px;
  height: 16px;
  border-radius: 16px;
  background: #651FFF;
}

.c19 {
  opacity: 0;
  position: absolute;
  cursor: inherit;
}

.c19:checked + .c20 {
  background: #512FC9;
}

.c19:checked + .c20:before {
  transform: translate(16px,-50%);
}

.c19:disabled + .c20 {
  background: #222C59;
}

.c19:disabled + .c20:before {
  background: #455a64;
}

.c17 {
  display: flex;
  align-items: center;
  justify-content: space-around;
  padding-right: 16px;
  padding-left: 16px;
  width: 120px;
}

.c27 > tbody > tr > td {
  vertical-align: middle;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c3 c4 c5"
    >
      <div
        class="c6 c7"
      >
        Applications
      </div>
      <a
        href="/web/discover"
        style="text-decoration: none;"
      >
        <button
          class="c8"
          kind="primary"
          title=""
          width="240px"
        >
          Add 
          application
        </button>
      </a>
    </div>
    <form
      class="c9"
    >
      <div
        class="c10 c4"
        width="100%"
      >
        <div
          class="c11 c12"
          style="width: 70%;"
        >
          <div
            class="c13"
            width="100%"
          >
            <div
              class="c14"
            >
              <input
                class="c15"
                placeholder="SEARCH..."
                value=""
              />
              <div
                class="c16"
              >
                <div
                  class="c17"
                >
                  <label
                    class="c18"
                  >
                    <input
                      class="c19"
                      type="checkbox"
                    />
                    <div
                      class="c20 c21"
                    />
                  </label>
                  <div
                    class="c22"
                  >
                    Advanced
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            style="line-height: 0px;"
          >
            <span
              class="c23 c24 icon icon-info_outline "
              color="light"
              style="cursor: pointer; font-size: 20px;"
            />
          </div>
        </div>
        <div
          class="c11 c1"
        >
          <div
            class="c25"
            color="primary.contrastText"
          >
            SHOWING 
            <strong>
              1
            </strong>
             - 
            <strong>
              4
            </strong>
             of
             
            <strong>
              4
            </strong>
          </div>
        </div>
      </div>
    </form>
    <table
      class="c26 c27"
    >
      <thead>
        <tr>
          <th
            style="cursor: default;"
          />
          <th>
            <a>
              Name
              <span
                class="c23 c24 icon icon-chevron-up "
                color="light"
                title="sort items asc"
              />
            </a>
          </th>
          <th>
            <a>
              Description
              <span
                class="c23 c24 icon icon-chevrons-expand-vertical "
                color="light"
                title="sort items"
              />
            </a>
          </th>
          <th
            style="cursor: default;"
          >
            Address
          </th>
          <th
            style="cursor: default;"
          >
            Labels
          </th>
          <th
            style="cursor: default;"
          />
        </tr>
      </thead>
      <tbody>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c28 c29"
              height="32px"
              width="32px"
            >
              <div
                class="c30"
                font-size="3"
              >
                J
              </div>
            </div>
          </td>
          <td>
            Jenkins
          </td>
          <td>
            This is a Jenkins app
          </td>
          <td>
            https://
            jenkins.teleport-proxy.com
          </td>
          <td>
            <div
              class="c31 c32"
              kind="secondary"
            >
              env: prod
            </div>
            <div
              class="c31 c32"
              kind="secondary"
            >
              cluster: one
            </div>
          </td>
          <td
            align="right"
          >
            <a
              class="c33"
              href="/web/launch/jenkins.one/one/jenkins.teleport-proxy.com"
              kind="border"
              rel="noreferrer"
              target="_blank"
              width="88px"
            >
              LAUNCH
            </a>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c34 c29"
              height="32px"
              width="32px"
            >
              <div
                class="c30"
                font-size="3"
              >
                M
              </div>
            </div>
          </td>
          <td>
            Mattermost1
          </td>
          <td>
            This is a Mattermost app
          </td>
          <td>
            https://
            mattermost.teleport-proxy.com
          </td>
          <td>
            <div
              class="c31 c32"
              kind="secondary"
            >
              env: dev
            </div>
            <div
              class="c31 c32"
              kind="secondary"
            >
              cluster: two
            </div>
          </td>
          <td
            align="right"
          >
            <a
              class="c33"
              href="/web/launch/mattermost.one/one/mattermost.teleport-proxy.com"
              kind="border"
              rel="noreferrer"
              target="_blank"
              width="88px"
            >
              LAUNCH
            </a>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c35 c29"
              height="32px"
              width="32px"
            >
              <div
                class="c30"
                font-size="3"
              >
                G
              </div>
            </div>
          </td>
          <td>
            Grafana
          </td>
          <td>
            This is a Grafana app
          </td>
          <td>
            https://
            grafana.teleport-proxy.com
          </td>
          <td>
            <div
              class="c31 c32"
              kind="secondary"
            >
              env: dev
            </div>
            <div
              class="c31 c32"
              kind="secondary"
            >
              cluster: one
            </div>
          </td>
          <td
            align="right"
          >
            <a
              class="c33"
              href="/web/launch/grafana.one/one/grafana.teleport-proxy.com"
              kind="border"
              rel="noreferrer"
              target="_blank"
              width="88px"
            >
              LAUNCH
            </a>
          </td>
        </tr>
        <tr>
          <td
            style="user-select: none;"
          >
            <div
              class="c36 c29"
              height="32px"
              width="32px"
            >
              <span
                class="c23 c37 icon icon-amazonaws "
                color="light"
                font-size="6"
              />
            </div>
          </td>
          <td>
            aws-console-1
          </td>
          <td>
            This is an AWS Console app
          </td>
          <td>
            https://
            awsconsole-1.teleport-proxy.com
          </td>
          <td>
            <div
              class="c31 c32"
              kind="secondary"
            >
              aws_account_id: A1234
            </div>
            <div
              class="c31 c32"
              kind="secondary"
            >
              env: dev
            </div>
            <div
              class="c31 c32"
              kind="secondary"
            >
              cluster: two
            </div>
          </td>
          <td
            align="right"
          >
            <button
              class="c33"
              kind="border"
              width="88px"
            >
              LAUNCH
              <span
                class="c23 c38 icon icon-caret-down "
                color="text.secondary"
                font-size="2"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
    <nav
      class="c39"
    >
      <div
        class="c10 c40"
        width="100%"
      >
        <div
          class="c41 c12"
        />
        <div
          class="c11 c1"
        >
          <button
            class="c42"
            disabled=""
            title="Previous page"
          >
            <span
              class="c23 c43 icon icon-arrow-left-circle "
              color="light"
              font-size="3"
            />
          </button>
          <button
            class="c44"
            disabled=""
            title="Next page"
          >
            <span
              class="c23 c43 icon icon-arrow-right-circle "
              color="light"
              font-size="3"
            />
          </button>
        </div>
      </div>
    </nav>
  </div>
</div>
`;

exports[`readonly empty state 1`] = `
.c0 {
  box-sizing: border-box;
  padding-left: 40px;
  padding-right: 40px;
}

.c3 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c8 {
  box-sizing: border-box;
  border-radius: 12px;
  color: rgba(255,255,255,0.87);
  margin-left: auto;
  margin-right: auto;
  max-width: 664px;
  padding: 56px;
  text-align: center;
}

.c1 {
  display: flex;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.c6 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 22px;
  line-height: 32px;
}

.c9 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 28px;
  line-height: 32px;
  margin-bottom: 16px;
}

.c10 {
  overflow: hidden;
  text-overflow: ellipsis;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
}

.c5 {
  flex-shrink: 0;
  border-bottom: 1px solid #1C254D;
  height: 56px;
  margin-left: -40px;
  margin-right: -40px;
  padding-left: 40px;
  padding-right: 40px;
}

.c7 {
  white-space: nowrap;
}

.c2 {
  width: 100%;
  height: 100%;
  flex-direction: column;
}

.c2::after {
  content: ' ';
  padding-bottom: 24px;
}

<div>
  <div
    class="c0 c1 c2"
  >
    <div
      class="c3 c4 c5"
    >
      <div
        class="c6 c7"
      >
        Applications
      </div>
    </div>
    <div
      class="c8"
      color="text.primary"
    >
      <div
        class="c9"
      >
        No Applications Found
      </div>
      <div
        class="c10"
      >
        Either there are no 
        applications
         in the "
        <span
          class="c11"
        >
          im-a-cluster
        </span>
        " cluster, or your roles don't grant you access.
      </div>
    </div>
  </div>
</div>
`;
